# Emulador_NMEA_GPS

./: CMakeLists.txt  README.md
include/: comunicacao_mqtt.h  comunicacao_serial.h  comunicacao_tcp.h  front.h  gps.h  minunit.h  modo_comunicacao_mqtt.h  modo_comunicacao_serial.h  modo_comunicacao_tcp.h  modo_comunicacao_web.h  rede_util.h  util.h  web_server.h
src/: comunicacao_tcp.c  front.c  main.c  util.c  web_server.c
src/domain/: gps.c
src/infraestrutura/: comunicacao_mqtt.c  comunicacao_serial.c  web_server.c
src/modos_comunicacao_service/: modo_comunicacao_mqtt.c  modo_comunicacao_serial.c  modo_comunicacao_tcp.c  modo_comunicacao_web.c
src/utils/: rede_util.c
test/: teste_gps.c  teste_util.c
